<resources>
    <string name="app_name">FirebaseUserManagement</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_in_facebook">Sign in with Facebook</string>
    <string name="sign_in_google">Sign in with Google</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="logout_text">Logout</string>
    <string name="facebook_app_id">12345</string>
    <string name="login_error">User or password not valid</string>
    <string name="empty_user_name">User name and password cannot be empty</string>
    <string name="signup_error">Sign up error</string>
    <string name="email_not_valid">Email not written correctly</string>
    <string name="password_length">Password length must be bigger than 7 characters</string>
    <string name="could_not_register">Error signing up</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="authentication_failed">Authentication Failed.</string>
    <string name="go_to_sign_in">Go Back to Sign in</string>
    <string name="go_to_sign_up">Go to Sign up</string>
    <string name="forgot_password">Forgot password?</string>
</resources>
